--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <div class="card-header card-search">
           Customer Search
           <button type="button" class="btn btn-primary new" data-bs-toggle="modal" data-bs-target="#newCustomerModal">New Customer</button>
-          <button type="button" class="btn btn-warning view">View All Customer</button>
         </div>
         <div class="card-body">
           <nav class="navbar bg-body-tertiary">
@@ -66,7 +65,7 @@
           <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-header text-bg-success">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">New Customer</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Customer</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -89,8 +88,8 @@
 
               </div>
               <div class="modal-footer">
-                <button type="submit" class="btn btn-outline-success" id="customer-save">Save</button>
-                <button type="button" class="btn btn-outline-primary" id="customer-update">Update </button>
+                <button type="button" class="btn btn-primary" id="customer-save">Save</button>
+                <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" id="customer-update">Update </button>
                 <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" id="customer-delete">Delete</button>
                 <button type="reset" class="btn btn-warning" id="customer-reset">Reset</button>
               </div>
@@ -100,7 +99,7 @@
 
         <table class="table table-striped ">
           <thead>
-          <tr>
+          <tr id="table-Customer tr">
             <th scope="col">Customer Id</th>
             <th scope="col">Name</th>
             <th scope="col">Address</th>
@@ -116,7 +115,6 @@
   </div>
 
 </section>
-
 <!--Item-->
 <section id="Item-section">
   <p class="h3 item"><img src="assets/item.png" alt="customer" id="item">Item</p>
@@ -127,7 +125,6 @@
         <div class="card-header card-search">
           Item Search
           <button type="button" class="btn btn-primary newItem" data-bs-toggle="modal" data-bs-target="#newItemModal">New Item</button>
-          <button type="button" class="btn btn-warning viewItem">View All Item</button>
         </div>
         <div class="card-body">
           <nav class="navbar bg-body-tertiary">
@@ -150,27 +147,27 @@
               </div>
               <div class="modal-body">
                 <div class="mb-3">
-                  <label class="form-label">Item Name :</label>
+                  <label class="form-label">Item Id :</label>
                   <input type="text" class="form-control" id="itemName">
                 </div>
                 <div class="mb-3">
                   <label class="form-label"> Description :</label>
-                  <input type="text" class="form-control" id="description">
+                  <input type="text" class="form-control" id="itemDescription">
                 </div>
                 <div class="mb-3">
                   <label class="form-label">Quantity :</label>
-                  <input type="tel" class="form-control" id="quantity">
+                  <input type="tel" class="form-control" id="itemQuantity">
                 </div>
                 <div class="mb-3">
                   <label class="form-label">Price :</label>
-                  <input type="tel" class="form-control" id="price">
+                  <input type="tel" class="form-control" id="itemPrice">
                 </div>
 
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-outline-success">Save</button>
-                <button type="button" class="btn btn-outline-primary">Update </button>
-                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-success" id="item-save">Save</button>
+                <button type="button" class="btn btn-outline-primary" id="item-update">Update </button>
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal" id="item-delete">Delete</button>
 
               </div>
             </div>
@@ -180,30 +177,13 @@
         <table class="table table-striped table-Item">
           <thead>
           <tr>
-            <th scope="col">Item Name</th>
+            <th scope="col">Item Id</th>
             <th scope="col">Description</th>
             <th scope="col">Quantity</th>
             <th scope="col">Price</th>
           </tr>
           </thead>
-          <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <tbody id="table-item">
           </tbody>
         </table>
       </div>
@@ -330,5 +310,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="Controller/Spa.js"></script>
 <script type="module" src="Controller/Customer.js"></script>
+<script type="module" src="Controller/Item.js"></script>
 </body>
 </html>
