--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="Styles/customer.css">
   <link rel="stylesheet" href="Styles/item.css">
-  <link rel="stylesheet" href="Styles/Order.css">
+  <link rel="stylesheet" href="Styles/PlaceOrder.css">
 </head>
 <body>
 
@@ -195,115 +195,97 @@
 
 <!--Order-->
 <section class="placeOrder" id="order-section">
-  <!--invoice-->
-  <div class="card text-center">
-    <div class="card-header" style="background: pink">
-      Invoice Details
-    </div>
-    <div class="card-body">
-      <label for="id">Order Id :</label>
-      <input type="text"  id="id" placeholder="Order Id">
+  <div class="container-fluid">
+    <div class="row">
 
-      <label for="date">Date</label>
-      <input type="date" id="date">
+      <div class="col-md-6 right-pane" style="margin-bottom: 0;">
+        <h1>Items</h1>
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="Item Id" class="form-label">Item Code</label>
+            <input type="number" class="form-control" id="Item Id">
+          </div>
+          <div class="col-md-6">
+            <label for="itemDesc" class="form-label">Item Name</label>
+            <input type="text" class="form-control" id="itemDesc">
+          </div>
+          <div class="col-12">
+            <label for="Unit Price" class="form-label">Unit Price</label>
+            <input type="text" class="form-control" id="Unit Price">
+          </div>
+          <div class="col-12">
+            <label for="Qty on hand" class="form-label">Qty on hand</label>
+            <input type="text" class="form-control" id="Qty on hand">
+          </div>
+          <div class="col-12">
+            <label for="Quantity" class="form-label">Order Quantity</label>
+            <input type="Number" class="form-control" id="Quantity" placeholder="Enter needed quantity">
+          </div>
+          <div class="col-md-4">
+            <label for="Sub Total" class="form-label">Sub Total</label>
+            <input type="text" class="form-control" id="Sub Total">
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Add to cart</button>
+          </div>
+        </form>
+      </div>
 
-      <label for="cus">Customer Id :</label>
-      <input type="text"  id="cus" placeholder="Id">
+      <div class="col-md-4 left-pane">
+        <h1>Order</h1>
+        <form class="row g-3">
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Order Id</label>
+            <input type="number" class="form-control" id="inputEmail4">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Customer Id</label>
+            <input type="number" class="form-control" id="inputPassword4">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress2" class="form-label">Customer Name</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="">
+          </div>
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">Date</label>
+            <input type="date" class="form-control" id="inputAddress" placeholder="YYYY/MM/DD">
+          </div>
+          <div class="col-md-4">
+            <label for="inputCity" class="form-label">Total</label>
+            <input type="text" class="form-control" id="inputCity">
+          </div>
+          <div class="col-md-4">
+            <label for="inputDiscount" class="form-label">Discount</label>
+            <input type="text" class="form-control" id="inputDiscount">
+          </div>
+          <div class="col-md-4">
+            <label for="inputZip" class="form-label">Sub Total</label>
+            <input type="text" class="form-control" id="inputZip">
+          </div>
 
-      <label for="name">Customer Name :</label>
-      <input type="text"  id="name" placeholder="Name">
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Buy</button>
+          </div>
+        </form>
+      </div>
 
-      <label for="address">Address :</label>
-      <input type="text"  id="address" placeholder="Address">
-
-      <label for="salary">Salary :</label>
-      <input type="number"  id="salary" placeholder="Salary">
-
+      <div class="col-md-12 table-pane" style="margin-top: 0;">
+        <table class="table">
+          <thead>
+          <tr>
+            <th scope="col">Code</th>
+            <th scope="col">Name</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Total</th>
+          </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-
-  <!--Item select-->
-  <div class="card text-center">
-    <div class="card-header" style="background: lightskyblue">
-      Item Select
-    </div>
-    <div class="card-body">
-      <label for="itemn">Item :</label>
-      <input type="text" id="itemn" placeholder="Item">
-
-      <label for="code">Item code :</label>
-      <input type="text" id="code" placeholder="Item Code">
-
-      <label for="itemName">Item Name :</label>
-      <input type="text" id="itemName" placeholder="Item Name">
-
-      <label for="price">Item Price :</label>
-      <input type="text" id="price" placeholder="Price">
-
-      <label for="qty">QtyOnHand :</label>
-      <input type="text" id="qty" placeholder="QtyOnHand">
-
-      <label for="qt">Order Qty :</label>
-      <input type="text" id="qt" placeholder="Order Qty">
-
-    </div>
-    <div class="card-footer text-body-secondary">
-      <button type="button" class="btn btn-outline-info">Add Item</button>
-    </div>
-  </div>
-
-  <!--price-->
-  <div class="card text-center">
-    <div class="card-body" style="background: lightgrey">
-      <label>Total : 2700/=</label>
-      <label>Sub Total : 2500/=</label>
-
-      <label for="cash">Cash :</label>
-      <input type="number"  id="cash" placeholder="Cash">
-
-      <label for="discount">Discount :</label>
-      <input type="number"  id="discount" placeholder="%">
-
-      <label for="balance">Balance :</label>
-      <input type="number"  id="balance" placeholder="Balance">
-
-
-
-    </div>
-    <div class="card-footer text-body-secondary">
-      <button type="button" class="btn btn-outline-success">Purchase</button>
-    </div>
-  </div>
-
-  <table class="table table-striped table table-Order">
-    <thead>
-    <tr>
-      <th scope="col">Item Name</th>
-      <th scope="col">Description</th>
-      <th scope="col">Quantity</th>
-      <th scope="col">Price</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-    </tbody>
-  </table>
 </section>
 
 <script src="assets/jquery-3.7.1.min.js"></script>
